# tano

./: CMakeLists.txt
cmake/: FindQMR.cmake
src/: CMakeLists.txt
src/core/playlist/: PlaylistFilterModel.cpp  PlaylistFilterModel.h  PlaylistModel.cpp  PlaylistModel.h
src/core/playlist/containers/: Channel.cpp  Channel.h
src/core/xmltv/: XmltvManager.cpp  XmltvManager.h  XmltvSql.cpp
src/player/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  main.cpp
src/player/common/: ChannelSelect.cpp  ChannelSelect.h  Constants.cpp  Constants.h
src/player/elements/: PlaybackElement.cpp  PlaybackElement.h  PlaylistElement.cpp
src/player/widgets/: FileDialogs.h
src/qml/: main.qml
src/qml/common/buttons/: NavigationButton.qml  OverlayDarkButton.qml
src/qml/common/rectangles/: NavigationOverlay.qml  OverlayDark.qml  OverlayDarkHighlight.qml  OverlayLight.qml
src/qml/common/text/: CoreText.qml  MainText.qml  OverlayDarkText.qml
src/qml/common/views/: ListDelegateDark.qml  ListDelegateMain.qml  ScrollBar.qml  ScrollBarVertical.qml
src/qml/fonts/: fontawesome-webfont.js
src/qml/fonts/IcoMoon/: icomoon.js
src/qml/js/: datetime.js
src/qml/menus/: MainMenuBar.qml  MenuFile.qml
src/qml/osd/: OsdMain.qml  OsdNumber.qml  OsdTime.qml
src/qml/osd/bar/: OsdBar.qml  OsdButtons.qml  OsdButtonsLeft.qml  OsdButtonsRight.qml  OsdSlider.qml
src/qml/osd/playlist/: OsdPlaylist.qml  OsdPlaylistDelegate.qml
src/qml/pages/: Navigation.qml  NavigationModel.qml  NavigationStack.qml  PageChannels.qml  PageHome.qml  PageSchedule.qml
src/qml/pages/playlist/: MainPlaylist.qml  MainPlaylistDelegate.qml
src/qml/player/: PagePlayer.qml  PlayerVideo.qml
src/qml/playlist/: PlaylistLayout.qml  PlaylistMain.qml  PlaylistMainDelegate.qml  PlaylistOsd.qml  PlaylistOsdDelegate.qml
src/quick/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt
src/quick/common/: ChannelSelect.cpp  ChannelSelect.h  Constants.cpp
src/quick/elements/: EpgElement.cpp  EpgElement.h  PlaylistElement.cpp  PlaylistElement.h
src/quick/qml/: main.qml  qml.qrc
src/quick/qml/common/buttons/: OverlayDarkButton.qml  SquareButton.qml
src/quick/qml/common/rectangles/: OverlayDarkLineHorizontal.qml  OverlayDarkLineVertical.qml  VideoBlur.qml
src/quick/qml/common/text/: OverlayDarkText.qml
src/quick/qml/common/views/: ScrollBar.qml
src/quick/qml/js/: datetime.js
src/quick/qml/menus/: MenuPlayback.qml
src/quick/qml/osd/: OsdBar.qml  OsdButtons.qml  OsdInfo.qml  OsdMain.qml  OsdNumber.qml  OsdSlider.qml
src/quick/qml/osd/bar/: OsdBar.qml  OsdButtons.qml  OsdButtonsModel.qml  OsdInfo.qml
src/quick/qml/osd/playlist/: OsdPlaylist.qml  OsdPlaylistDelegate.qml  OsdPlaylistHighlight.qml
src/quick/qml/player/: PagePlayer.qml  PlayerVideo.qml
src/widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/widgets/common/: BrowseWidget.cpp
src/widgets/editor/: PlaylistEditor.cpp  PlaylistExportTvheadend.cpp
src/widgets/main/: MediaPlayer.cpp
src/widgets/menu/: MenuTrackSubtitles.cpp
